pkgs/dartcv_core/src/imgproc.h

// Blurs an image using the box filter.
// void cv::boxFilter (InputArray src, OutputArray dst, int ddepth, Size ksize, Point anchor=Point(-1,-1), bool normalize=true, int borderType=BORDER_DEFAULT)
CvStatus *
BoxFilter(Mat src, Mat dst, int ddepth, Size ps, Point anchor, bool normalize, int borderType);
// SECTION - Histograms
// Calculates the back projection of a histogram.
// void cv::calcBackProject (const Mat *images, int nimages, const int *channels, const SparseMat &hist, OutputArray backProject, const float **ranges, double scale=1, bool uniform=true)
// void cv::calcBackProject (const Mat *images, int nimages, const int *channels, InputArray hist, OutputArray backProject, const float **ranges, double scale=1, bool uniform=true)
// void cv::calcBackProject (InputArrayOfArrays images, const std::vector< int > &channels, InputArray hist, OutputArray dst, const std::vector< float > &ranges, double scale)
CvStatus *CalcBackProject(
    VecMat mats, VecI32 chans, Mat hist, CVD_OUT Mat *backProject, VecF32 rng, double scale
);
// Creates a smart pointer to a cv::CLAHE class and initializes it.
// Ptr< CLAHE > cv::createCLAHE (double clipLimit=40.0, Size tileGridSize=Size(8, 8))

CvStatus *CLAHE_Create(CLAHE *rval);
CvStatus *CLAHE_CreateWithParams(double clipLimit, Size tileGridSize, CLAHE *rval);
void CLAHE_Close(CLAHEPtr c);
CvStatus *CLAHE_Apply(CLAHE c, Mat src, Mat dst);
CvStatus *CLAHE_CollectGarbage(CLAHE c);
CvStatus *CLAHE_GetClipLimit(CLAHE c, double *rval);
CvStatus *CLAHE_SetClipLimit(CLAHE c, double clipLimit);
CvStatus *CLAHE_GetTilesGridSize(CLAHE c, Size *rval);
CvStatus *CLAHE_SetTilesGridSize(CLAHE c, Size size);
// Finds the four vertices of a rotated rect. Useful to draw the rotated rectangle.
// void cv::boxPoints (RotatedRect box, OutputArray points)
CvStatus *BoxPoints(RotatedRect rect, VecPoint2f *boxPts);