packages/dartcv/lib/src/g/imgproc.g.dart


  late final _BoxFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, CvSize, CvPoint,
              ffi.Bool, ffi.Int)>>('BoxFilter');
  late final _BoxFilter = _BoxFilterPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, CvSize, CvPoint, bool, int)>();

  ffi.Pointer<CvStatus> BoxFilter_Async(
    Mat src,
    int ddepth,
    CvSize ps,
    imp1.CvCallback_1 callback,
  ) {
    return _BoxFilter_Async(
      src,
      ddepth,
      ps,
      callback,
    );
  }

  late final _BoxFilter_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, CvSize, imp1.CvCallback_1)>>('BoxFilter_Async');
  late final _BoxFilter_Async = _BoxFilter_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, CvSize, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> BoxPoints(
    RotatedRect rect,
    ffi.Pointer<VecPoint2f> boxPts,
  ) {
    return _BoxPoints(
      rect,
      boxPts,
    );
  }

  late final _BoxPointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              RotatedRect, ffi.Pointer<VecPoint2f>)>>('BoxPoints');
  late final _BoxPoints = _BoxPointsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(RotatedRect, ffi.Pointer<VecPoint2f>)>();

  ffi.Pointer<CvStatus> BoxPoints_Async(
    RotatedRect rect,
    imp1.CvCallback_1 callback,
  ) {
    return _BoxPoints_Async(
      rect,
      callback,
    );
  }

  late final _BoxPoints_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              RotatedRect, imp1.CvCallback_1)>>('BoxPoints_Async');
  late final _BoxPoints_Async = _BoxPoints_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(RotatedRect, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CLAHE_Apply(
    CLAHE c,
    Mat src,
    Mat dst,
  ) {
    return _CLAHE_Apply(
      c,
      src,
      dst,
    );
  }

  late final _CLAHE_ApplyPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(CLAHE, Mat, Mat)>>(
      'CLAHE_Apply');
  late final _CLAHE_Apply = _CLAHE_ApplyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE, Mat, Mat)>();

  ffi.Pointer<CvStatus> CLAHE_Apply_Async(
    CLAHE self,
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _CLAHE_Apply_Async(
      self,
      src,
      callback,
    );
  }

  late final _CLAHE_Apply_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CLAHE, Mat, imp1.CvCallback_1)>>('CLAHE_Apply_Async');
  late final _CLAHE_Apply_Async = _CLAHE_Apply_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE, Mat, imp1.CvCallback_1)>();

  void CLAHE_Close(
    CLAHEPtr c,
  ) {
    return _CLAHE_Close(
      c,
    );
  }

  late final _CLAHE_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CLAHEPtr)>>('CLAHE_Close');
  late final _CLAHE_Close =
      _CLAHE_ClosePtr.asFunction<void Function(CLAHEPtr)>();

  void CLAHE_Close_Async(
    CLAHEPtr self,
    imp1.CvCallback_0 callback,
  ) {
    return _CLAHE_Close_Async(
      self,
      callback,
    );
  }

  late final _CLAHE_Close_AsyncPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(CLAHEPtr, imp1.CvCallback_0)>>(
      'CLAHE_Close_Async');
  late final _CLAHE_Close_Async = _CLAHE_Close_AsyncPtr.asFunction<
      void Function(CLAHEPtr, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> CLAHE_CollectGarbage(
    CLAHE c,
  ) {
    return _CLAHE_CollectGarbage(
      c,
    );
  }

  late final _CLAHE_CollectGarbagePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(CLAHE)>>(
          'CLAHE_CollectGarbage');
  late final _CLAHE_CollectGarbage = _CLAHE_CollectGarbagePtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE)>();

  ffi.Pointer<CvStatus> CLAHE_CollectGarbage_Async(
    CLAHE self,
    imp1.CvCallback_0 callback,
  ) {
    return _CLAHE_CollectGarbage_Async(
      self,
      callback,
    );
  }

  late final _CLAHE_CollectGarbage_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CLAHE, imp1.CvCallback_0)>>('CLAHE_CollectGarbage_Async');
  late final _CLAHE_CollectGarbage_Async = _CLAHE_CollectGarbage_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(CLAHE, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> CLAHE_Create(
    ffi.Pointer<CLAHE> rval,
  ) {
    return _CLAHE_Create(
      rval,
    );
  }

  late final _CLAHE_CreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<CLAHE>)>>('CLAHE_Create');
  late final _CLAHE_Create = _CLAHE_CreatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<CLAHE>)>();

  ffi.Pointer<CvStatus> CLAHE_CreateWithParams(
    double clipLimit,
    CvSize tileGridSize,
    ffi.Pointer<CLAHE> rval,
  ) {
    return _CLAHE_CreateWithParams(
      clipLimit,
      tileGridSize,
      rval,
    );
  }

  late final _CLAHE_CreateWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Double, CvSize,
              ffi.Pointer<CLAHE>)>>('CLAHE_CreateWithParams');
  late final _CLAHE_CreateWithParams = _CLAHE_CreateWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(double, CvSize, ffi.Pointer<CLAHE>)>();

  ffi.Pointer<CvStatus> CLAHE_CreateWithParams_Async(
    double clipLimit,
    CvSize tileGridSize,
    imp1.CvCallback_1 callback,
  ) {
    return _CLAHE_CreateWithParams_Async(
      clipLimit,
      tileGridSize,
      callback,
    );
  }

  late final _CLAHE_CreateWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Double, CvSize,
              imp1.CvCallback_1)>>('CLAHE_CreateWithParams_Async');
  late final _CLAHE_CreateWithParams_Async =
      _CLAHE_CreateWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(double, CvSize, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CLAHE_Create_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _CLAHE_Create_Async(
      callback,
    );
  }

  late final _CLAHE_Create_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'CLAHE_Create_Async');
  late final _CLAHE_Create_Async = _CLAHE_Create_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CLAHE_GetClipLimit(
    CLAHE c,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _CLAHE_GetClipLimit(
      c,
      rval,
    );
  }

  late final _CLAHE_GetClipLimitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CLAHE, ffi.Pointer<ffi.Double>)>>('CLAHE_GetClipLimit');
  late final _CLAHE_GetClipLimit = _CLAHE_GetClipLimitPtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> CLAHE_GetClipLimit_Async(
    CLAHE self,
    imp1.CvCallback_1 callback,
  ) {
    return _CLAHE_GetClipLimit_Async(
      self,
      callback,
    );
  }

  late final _CLAHE_GetClipLimit_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CLAHE, imp1.CvCallback_1)>>('CLAHE_GetClipLimit_Async');
  late final _CLAHE_GetClipLimit_Async = _CLAHE_GetClipLimit_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(CLAHE, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CLAHE_GetTilesGridSize(
    CLAHE c,
    ffi.Pointer<CvSize> rval,
  ) {
    return _CLAHE_GetTilesGridSize(
      c,
      rval,
    );
  }

  late final _CLAHE_GetTilesGridSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CLAHE, ffi.Pointer<CvSize>)>>('CLAHE_GetTilesGridSize');
  late final _CLAHE_GetTilesGridSize = _CLAHE_GetTilesGridSizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE, ffi.Pointer<CvSize>)>();

  ffi.Pointer<CvStatus> CLAHE_GetTilesGridSize_Async(
    CLAHE self,
    imp1.CvCallback_1 callback,
  ) {
    return _CLAHE_GetTilesGridSize_Async(
      self,
      callback,
    );
  }

  late final _CLAHE_GetTilesGridSize_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CLAHE, imp1.CvCallback_1)>>('CLAHE_GetTilesGridSize_Async');
  late final _CLAHE_GetTilesGridSize_Async = _CLAHE_GetTilesGridSize_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(CLAHE, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CLAHE_SetClipLimit(
    CLAHE c,
    double clipLimit,
  ) {
    return _CLAHE_SetClipLimit(
      c,
      clipLimit,
    );
  }

  late final _CLAHE_SetClipLimitPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(CLAHE, ffi.Double)>>(
      'CLAHE_SetClipLimit');
  late final _CLAHE_SetClipLimit = _CLAHE_SetClipLimitPtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE, double)>();

  ffi.Pointer<CvStatus> CLAHE_SetClipLimit_Async(
    CLAHE self,
    double clipLimit,
    imp1.CvCallback_0 callback,
  ) {
    return _CLAHE_SetClipLimit_Async(
      self,
      clipLimit,
      callback,
    );
  }

  late final _CLAHE_SetClipLimit_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CLAHE, ffi.Double,
              imp1.CvCallback_0)>>('CLAHE_SetClipLimit_Async');
  late final _CLAHE_SetClipLimit_Async =
      _CLAHE_SetClipLimit_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(CLAHE, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> CLAHE_SetTilesGridSize(
    CLAHE c,
    CvSize size,
  ) {
    return _CLAHE_SetTilesGridSize(
      c,
      size,
    );
  }

  late final _CLAHE_SetTilesGridSizePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(CLAHE, CvSize)>>(
      'CLAHE_SetTilesGridSize');
  late final _CLAHE_SetTilesGridSize = _CLAHE_SetTilesGridSizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(CLAHE, CvSize)>();

  ffi.Pointer<CvStatus> CLAHE_SetTilesGridSize_Async(
    CLAHE self,
    CvSize size,
    imp1.CvCallback_0 callback,
  ) {
    return _CLAHE_SetTilesGridSize_Async(
      self,
      size,
      callback,
    );
  }

  late final _CLAHE_SetTilesGridSize_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CLAHE, CvSize,
              imp1.CvCallback_0)>>('CLAHE_SetTilesGridSize_Async');
  late final _CLAHE_SetTilesGridSize_Async =
      _CLAHE_SetTilesGridSize_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(CLAHE, CvSize, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> CalcBackProject(
    VecMat mats,
    VecI32 chans,
    Mat hist,
    ffi.Pointer<Mat> backProject,
    VecF32 rng,
    double scale,
  ) {
    return _CalcBackProject(
      mats,
      chans,
      hist,
      backProject,
      rng,
      scale,
    );
  }

  late final _CalcBackProjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecMat, VecI32, Mat, ffi.Pointer<Mat>,
              VecF32, ffi.Double)>>('CalcBackProject');
  late final _CalcBackProject = _CalcBackProjectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecMat, VecI32, Mat, ffi.Pointer<Mat>, VecF32, double)>();

  ffi.Pointer<CvStatus> CalcBackProject_Async(
    VecMat mats,
    VecI32 chans,
    Mat backProject,
    VecF32 rng,
    double scale,
    imp1.CvCallback_1 callback,
  ) {
    return _CalcBackProject_Async(
      mats,
      chans,
      backProject,
      rng,
      scale,
      callback,
    );
  }

  late final _CalcBackProject_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecMat, VecI32, Mat, VecF32,
              ffi.Double, imp1.CvCallback_1)>>('CalcBackProject_Async');
  late final _CalcBackProject_Async = _CalcBackProject_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecMat, VecI32, Mat, VecF32, double, imp1.CvCallback_1)>();
